
16. Unicode character properties were updated from Unicode 6.3.0.

17. The compile-time code for auto-possessification has been refactored, based 
    on a patch by Zoltan Herczeg. It now happens after instead of during 
    compilation. The code is cleaner, and more cases are handled. The option 
    PCRE_NO_AUTO_POSSESSIFY is added for testing purposes, and the -O and /O 
    options in pcretest are provided to set it.
    
18. The character VT has been added to the set of characters that match \s and
    are generally treated as white space, following this same change in Perl 
    5.18. There is now no difference between "Perl space" and "POSIX space". 
    
19. The code for checking named groups as conditions, either for being set or 
    for being recursed, has been refactored (this is related to 14 and 15
    above). Processing unduplicated named groups should now be as fast at
    numerical groups, and processing duplicated groups should be faster than
    before.
    
20. Two patches to the CMake build system, by Alexander Barkov:

      (1) Replace the "source" command by "." in CMakeLists.txt because 
          "source" is a bash-ism.
          
      (2) Add missing HAVE_STDINT_H and HAVE_INTTYPES_H to config-cmake.h.in; 
          without these the CMake build does not work on Solaris.
          
21. Perl has changed its handling of \8 and \9. If there is no previously 
    encountered capturing group of those numbers, they are treated as the 
    literal characters 8 and 9 instead of a binary zero followed by the 
    literals. PCRE now does the same.
    
22. Following Perl, added \o{} to specify codepoints in octal, making it
    possible to specify values greater than 0777 and also making them 
    unambiguous. 
    
23. Perl now gives an error for missing closing braces after \x{... instead of 
    treating the string as literal. PCRE now does the same.
    
24. RunTest used to grumble if an inappropriate test was selected explicitly, 